# api

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  cloudbuild.yaml  config.py  db.py  feature_extraction.py  kpi_predictor.py  kpis.py  main.py  model_client.py  pyproject.toml  requirements.txt  schemas.py  storage.py  webhooks.py
api/: __init__.py  db.py  kpi_predictor.py  main.py  model_client.py
api/middleware/: __init__.py  auth.py  rate_limit.py
api/routes/: __init__.py  admin.py  analysis.py  features.py  feedback.py  sessions.py  streaming.py
middleware/: __init__.py  auth.py  rate_limit.py
routes/: __init__.py  activity.py  admin.py  analysis.py  features.py  feedback.py  health.py  infrastructure.py  sessions.py  streaming.py  training_runs.py
streaming/: __init__.py  bus.py  emotions.py  frame_extractor.py  modulation.py  pipeline.py  session.py  speaker_utils.py
streaming/adapters/: __init__.py  websocket.py
